--- a/de12/css/style.css
+++ b/de12/css/style.css
@@ -3,9 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:400,700&display=swap&subset=japanese');
 /* フォントを指定したいところで */
-
+                
 logo img{
-    border-radius: 50%;
+    border-radius: 100%;
     width: 150px;
     height: 150px;
     object-fit: cover; /* 画像のトリミング */
@@ -24,10 +24,10 @@ logotohome img{
 html, body {
 	font-size: 16px;
 	font-family: sans-serif;
-	color: #393939;
+	color: #e55f5f;
     margin-left: 15px;
     margin-bottom: 40px;
-	background: #efefef;
+	background: #a1c3a892;
 }
 h1{
     text-indent: 0em;
@@ -48,7 +48,7 @@ p{
 }
 span.blackback{
     text-indent: 3em;
-    background: #393939;
-    color: #efefef;
+    background: #d67474;
+    color: #3c9df1;
 }
 
