--- a/de12/css/style.css
+++ b/de12/css/style.css
@@ -24,7 +24,7 @@ logotohome img{
 html, body {
 	font-size: 16px;
 	font-family: sans-serif;
-	color: #e55f5f;
+	color: #07818a;
     margin-left: 15px;
     margin-bottom: 40px;
 	background:linear-gradient(270deg, #f0f4f8, #d9E2ec);
